@@ -1,3 +1,11 @@
+2014-03-13  eig  <eig114@gmail.com>
+
+	* Profiler.cs: Функции для вычисления расстояний между
+	  профилями
+
+	* NGrams.csproj:
+	* NgramGetter.cs: 
+
 2014-02-13  eig  <eig114@gmail.com>
 
 	* Main.cs:
